# ScrapingSample

./: .gitignore  README.md  pyproject.toml  tasks.py
apps/: network-analysis.ipynb  scrapy.cfg  workflow.py
apps/coconala_checker/: items.py  middlewares.py  pipelines.py  settings.py
apps/coconala_checker/spiders/: coconala.py
apps/postprocess/: categorize.py
