[project]
name = "scraping-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "ja-core-news-md",
    "networkx[default]>=3.4.2",
    "pandas>=2.2.3",
    "scrapy>=2.12.0",
    "spacy>=3.8.5",
]

[dependency-groups]
dev = [
    "gitpython>=3.1.44",
    "invoke>=2.2.0",
    "mypy>=1.15.0",
    "ruff>=0.11.3",
    "pandas-stubs>=2.2.3.250308",
]

[tool.ruff]
line-length = 120

[tool.uv.sources]
ja-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_md-3.8.0/ja_core_news_md-3.8.0-py3-none-any.whl" }
